FIX: book a room z-index

--- a/src/assets/scss/BookARoom.scss
+++ b/src/assets/scss/BookARoom.scss
@@ -9,6 +9,7 @@
   flex-wrap: wrap;
 
   &__block {
+    z-index: 1;
     flex-basis: 100%;
     width: 100%;
     @media (min-width: 48em) {
@@ -17,6 +18,7 @@
   }
 
   &__contacts-info {
+    z-index: 1;
     height: 100%;
     display: flex;
     align-items: center;
